2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* comm_wire.man: Fixed description of messages in the basic
	  message layer, and of EOL, per [SF Tcllib Bug 1739372] (by Lars
	  Hellstroem). General cleanup (spell checking).

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* comm.test: Updated to require Tcl 8.3 (for snit).

2007-08-15  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl (::comm::Vwait): Fixed uplevel which failed when used
	* comm.man: with variable names containing spaces. Bumped the
	* pkgIndex.tcl: package version to 4.5.6. Thanks to Bryan Oakley.

2007-08-14  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl (::comm::CommRunHook): Fixed typo in variable name,
 	* comm.man: should be 'res', not 'result'. Bumped the package
	* pkgIndex.tcl: version to 4.5.5. Thanks to Bryan Oakley.

2007-08-09  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl (comm::comm_cmd_send): Replaced the 'after idle unset
	  result' with an immediate unset, saving the infromation into a
	  local variable. The 'after idle' can spill into a forked child
	  process if there is no event loop between its location and the
	  fork. This may bork the child if the next event loop is the
	  'vwait' of comm's send a few lines above, and the child used the
	  same serial number for its next request. In that case the
	  parent's 'after idle unset' will delete the very array element
	  the child is waiting for, unlocking the vwait, causing it to
	  access a now missing array element, instead of the expected
	  result. Fix by JeffH, Analysis by AndreasK, bugfix actually done
	  before the analysis. This bug happened at Cisco.	
	* comm.man: Bumped the package version to 4.5.4.
	* pkgIndex.tcl:

2007-06-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.tcl: Bugfixes in the wrapper for 'update'.